--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
   
     const featureService = "https://services1.arcgis.com/fe2kKd3pQJKqve16/arcgis/rest/services/HistoricMonitoringSites/FeatureServer/0";
 
-    const apiKey = "AAPK9eba4a75d9184c09bb8cc5ac9f5c2f6dhOf7RmbLAI-sUhd--0MgbkUSZ13YifOiPplRIjLHFRGi32oQSfh1Y1g9IHqEVYPB";
+    const apiKey = "NOPE";
     const basemapEnum = "ArcGIS:Topographic";
 
     const map = L.map("map", {
       minZoom: 2
-    }).setView([41.55,-85.4], 10);
+    }).setView([41.55,-85.8], 10);
 
     window.map = map;
 
