--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
         <button id="turbidity">Turbidity</button>
       </div>
 
+      <div class="flex-center data-selector" id="physical-selector">
+        <button id="gageflow">Gage Flow</button>
+      </div>
+
+
       <div class="flex-center data-selector" id="biological-selector">
         <button id="ecoli">E. Coli</button>
       </div>
@@ -134,23 +139,12 @@
 
     function registerSourceSelect(button_id, property, color) {
       $(`#${button_id}`).click(() => {
-        window.sites.remove();
-
-        const sites = L.esri.featureLayer({
-          url: featureService,
-          pointToLayer: (p, latlng) => {
-            //clg(p);
-            return L.circleMarker(latlng, {
-              color: color,
-              stroke: false,
-              fillOpacity: 0.9,
-              radius: p.properties[property]/ 100
-            });
-          }
-        }).addTo(map);
-    
-        window.sites = sites;
-
+        window.sites.setStyle((p) => {
+          return { color: color,
+          stroke: false,
+          fillOpacity: 0.9,
+          radius: p.properties[property]/ 100}
+        });
       })
     }
   
@@ -171,14 +165,15 @@
 
     const sites = L.esri.featureLayer({
       url: featureService,
+      style: (p) => {
+        return { color: "orange",
+        stroke: false,
+        fillOpacity: 0.9,
+        radius: p.properties.Nitrate_Ni}
+      },
       pointToLayer: (p, latlng) => {
         //clg(p);
-        return L.circleMarker(latlng, {
-          color: "purple",
-          stroke: false,
-          fillOpacity: 0.9,
-          radius: p.properties.Nitrate_Ni * 10
-        });
+        return L.circleMarker(latlng);
       }
     }).addTo(map);
 
