--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     crossorigin=""></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
+  <script src="d3-legend.js"></script>
 
 
   <!-- Load Esri Leaflet from CDN -->
@@ -91,7 +94,7 @@
 
 </head>
 
-<body>
+<body>pre
   <main>
     <div id="data">
       <h3>Data Source</h3>
@@ -118,10 +121,34 @@
 
       <h3>Legend</h3>
 
+      <svg id="dataviz" height=200 width=264></svg>
+
     </div>
     <div id="map"></div>
   </main>
+
   <script>
+
+    const svg = d3.select("#dataviz")
+    svg.append("circle")
+        .attr("cx", 2).attr("cy", 2).attr("r", 40).style("fill", "blue");
+
+
+    var x = d3.scaleLinear()
+        .domain([0, 100])         // This is the min and the max of the data: 0 to 100 if percentages
+        .range([0, 400]);       // This is the corresponding value I want in Pixel
+    
+    // Show the axis that corresponds to this scale
+    svg.call(d3.axisBottom(x));
+
+    const l = Legend(d3.scaleQuantize([1, 10], d3.schemePurples[9]), {
+      title: "Just a scale",
+      width: 200,
+      marginLeft: 32
+    });
+
+    $('#data').append(l);
+
     function clg(o) {
       console.log(o);
     }
