--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <div id="map"></div>
   </main>
 
-  <script src="map.js"></script>
-  <script src="utils.js"></script>
   <script src="app.js"></script>
+  <script src="map-data.js"></script>
+  <script src="ui.js"></script>
 
 </body>
 
