adding temperature works

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 
         <div class="flex-center data-selector" id="physical-selector">
           <button id="turbidity">Turbidity</button>
+          <button id="temp">Temperature</button>
           <button id="gageflow" disabled>Gage Flow</button>
+          <button id="gageheight" disabled>Gage Height</button>
 
         </div>
-
 
         <div class="flex-center data-selector" id="biological-selector">
           <button id="ecoli">E. Coli</button>
@@ -66,6 +67,7 @@
 
   <script src="app.js"></script>
   <script src="map-data.js"></script>
+  <script src="usgs-data.js"></script>
   <script src="ui.js"></script>
 
 </body>
